ingress/hn-service-ingress-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hn-service-ingress-https
spec:
  tls:
  - hosts:
    - hostnameservice.classpath.com
    secretName: cafe-secret
  rules:
  - host: hostnameservice.classpath.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hostname-service
          servicePort: 80
