ingress/hn-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hn-service-ingress
spec:
  rules:
  - host: hostnameservice.classpath.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hostname-service
          servicePort: 80
