ingress/order-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: order-ingress
  annotations:
#    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  tls:
  - hosts:
    - classpath.com
    secretName: orders-secret
  rules:
  - host: classpath.com
    http:
      paths:
        - path: /api/v1/orders
          backend:
            serviceName: order-service
            servicePort: 80
